# higgsfield_ai_mcp

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/higgsfield_mcp/: client.py  server.py
