[tool.poetry]
name = "higgsfield-mcp"
version = "0.1.0"
description = "MCP server for Higgsfield AI API - generate images and videos using FastMCP"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "higgsfield_mcp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = "^2.0.0"
httpx = "^0.28.1"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
higgsfield-mcp = "higgsfield_mcp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
